--- a/Hifdh Tracker/Lauch/Base.lproj/Main.storyboard
+++ b/Hifdh Tracker/Lauch/Base.lproj/Main.storyboard
@@ -1,8 +1,181 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y4q-4S-Kdu">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Eru-63-1a3">
+            <objects>
+                <tabBarController id="Y4q-4S-Kdu" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="glv-Hj-hUZ">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="selectedIndex">
+                            <integer key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <segue destination="vFN-XO-csX" kind="relationship" relationship="viewControllers" id="6qe-6O-5bI"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dHm-px-YUW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-622" y="-388"/>
+        </scene>
+        <!--Log Table View Controller-->
+        <scene sceneID="Tb9-sq-PbC">
+            <objects>
+                <tableViewController id="yoN-8U-b1W" customClass="LogTableViewController" customModule="Hifdh_Tracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="i1i-9E-lVw">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="dateCell" rowHeight="59" id="JMA-jF-wtP" customClass="DateTableViewCell" customModule="Hifdh_Tracker" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="393" height="59"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JMA-jF-wtP" id="nV3-oK-qch">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="59"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Zr-zK-J1w">
+                                            <rect key="frame" x="20" y="11" width="36" height="37"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <datePicker contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="IRG-eP-uwd">
+                                            <rect key="frame" x="215.66666666666663" y="11" width="157.33333333333337" height="37"/>
+                                        </datePicker>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="8Zr-zK-J1w" firstAttribute="top" secondItem="nV3-oK-qch" secondAttribute="topMargin" id="2Fy-gW-Ji4"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="IRG-eP-uwd" secondAttribute="trailing" id="Ft5-6F-VfN"/>
+                                        <constraint firstItem="IRG-eP-uwd" firstAttribute="top" secondItem="nV3-oK-qch" secondAttribute="topMargin" id="JMT-tF-cga"/>
+                                        <constraint firstItem="IRG-eP-uwd" firstAttribute="centerY" secondItem="8Zr-zK-J1w" secondAttribute="centerY" id="Kpx-MX-jpa"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="IRG-eP-uwd" secondAttribute="bottom" id="OkZ-Ph-lfK"/>
+                                        <constraint firstItem="IRG-eP-uwd" firstAttribute="width" secondItem="nV3-oK-qch" secondAttribute="width" multiplier="0.4" id="WTC-MW-wBL"/>
+                                        <constraint firstItem="8Zr-zK-J1w" firstAttribute="leading" secondItem="nV3-oK-qch" secondAttribute="leadingMargin" id="mM1-bw-ZkR"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="datePicker" destination="IRG-eP-uwd" id="Az7-W3-5nW"/>
+                                    <outlet property="titleLabel" destination="8Zr-zK-J1w" id="XZn-ZS-bZS"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="configCell" id="cJQ-40-qie" customClass="ConfigurationTableViewCell" customModule="Hifdh_Tracker" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="109" width="393" height="53.333332061767578"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cJQ-40-qie" id="Xy6-6R-AJN">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="53.333332061767578"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="DYu-gI-kl1">
+                                            <rect key="frame" x="20" y="11" width="353" height="32.333333333333329"/>
+                                            <segments>
+                                                <segment title="Pages"/>
+                                                <segment title="Surahs"/>
+                                            </segments>
+                                            <connections>
+                                                <action selector="configControlValueChanged:" destination="cJQ-40-qie" eventType="valueChanged" id="Wiq-So-TzQ"/>
+                                            </connections>
+                                        </segmentedControl>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="DYu-gI-kl1" firstAttribute="top" secondItem="Xy6-6R-AJN" secondAttribute="topMargin" id="3Gz-iK-dRD"/>
+                                        <constraint firstItem="DYu-gI-kl1" firstAttribute="leading" secondItem="Xy6-6R-AJN" secondAttribute="leadingMargin" id="9GH-4B-jaS"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="DYu-gI-kl1" secondAttribute="trailing" id="Ktd-r2-pu2"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="DYu-gI-kl1" secondAttribute="bottom" id="rZ1-Ij-ck6"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="configSegmentedControl" destination="DYu-gI-kl1" id="JEW-Xh-5Sc"/>
+                                </connections>
+                            </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="logCell" id="HIx-Ml-FUk" customClass="LogTableViewCell" customModule="Hifdh_Tracker" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="162.33333206176758" width="393" height="56.666667938232422"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HIx-Ml-FUk" id="wUv-UE-Isd">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="56.666667938232422"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Jyl-6f-6as">
+                                            <rect key="frame" x="20" y="11" width="353" height="34.666666666666664"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Al-Mu'minoon" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LhD-kZ-EpS">
+                                                    <rect key="frame" x="0.0" y="0.0" width="107.66666666666667" height="34.666666666666664"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="XTE-eC-T4F">
+                                                    <rect key="frame" x="112.66666666666664" y="0.0" width="186.33333333333337" height="34.666666666666664"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="0uD-cg-WT5"/>
+                                                    </constraints>
+                                                </datePicker>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="djW-cE-Nas">
+                                                    <rect key="frame" x="304" y="0.0" width="51" height="34.666666666666664"/>
+                                                </switch>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Jyl-6f-6as" secondAttribute="trailing" id="Hnw-RD-O7u"/>
+                                        <constraint firstItem="Jyl-6f-6as" firstAttribute="leading" secondItem="wUv-UE-Isd" secondAttribute="leadingMargin" id="hZ1-m4-a5M"/>
+                                        <constraint firstItem="Jyl-6f-6as" firstAttribute="top" secondItem="wUv-UE-Isd" secondAttribute="topMargin" id="n0M-YL-phH"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Jyl-6f-6as" secondAttribute="bottom" id="zaY-JH-E0c"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="datePicker" destination="XTE-eC-T4F" id="27c-vw-lr3"/>
+                                    <outlet property="memorySwitch" destination="djW-cE-Nas" id="PFZ-S3-Xzt"/>
+                                    <outlet property="titleLabel" destination="LhD-kZ-EpS" id="gf0-nR-MMZ"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="yoN-8U-b1W" id="72E-84-8h1"/>
+                            <outlet property="delegate" destination="yoN-8U-b1W" id="fP8-zY-Oxo"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="IfX-0E-O7G"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZkO-FP-V0k" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1469.4656488549617" y="-388.02816901408454"/>
+        </scene>
+        <!--Log-->
+        <scene sceneID="Tzh-cR-miT">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vFN-XO-csX" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Log" image="plus" catalog="system" id="qb0-tk-ZHW"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vPu-Ec-pPc">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="yoN-8U-b1W" kind="relationship" relationship="rootViewController" id="fue-1w-Lkf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ryQ-wm-AAL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="542.74809160305347" y="-388.02816901408454"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="plus" catalog="system" width="128" height="113"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
